force-app/main/default/objects/Subscription__c/Subscription__c.object-meta.xml
<CustomObject>
    <description>The reader can take many books. Subscription is a giving a book home. Person with a one-time subscription can&apos;t take books home. DaysOfHoldAllowed__c = 0 means reader hall</description>
    <label>Subscription</label>
    <nameField>
        <displayFormat>SUB-{000000}</displayFormat>
        <label>Subscription Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Subscriptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>