force-app/main/default/objects/Subscription__c/fields/DaysOfHoldAllowed__c.field-meta.xml
<CustomField>
    <fullName>DaysOfHoldAllowed__c</fullName>
    <description>how many days Reader is allowed to hold the book.</description>
    <label>Days Of Hold Allowed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>