force-app/main/default/objects/Subscription__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>name</description>
    <displayFormat>SUB-{000000}</displayFormat>
    <label>Name</label>
    <type>AutoNumber</type>
</CustomField>