force-app/main/default/objects/Subscription__c/fields/ReturnedDate__c.field-meta.xml
<CustomField>
    <fullName>ReturnedDate__c</fullName>
    <description>Date the book was returned (is set after the book was returned)</description>
    <label>Returned Date</label>
    <type>Date</type>
</CustomField>