force-app/main/default/objects/Subscription__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <description>Date when book was taken. Required Field</description>
    <label>Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>