force-app/main/default/objects/Subscription__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>IF ( NOT(ISBLANK( ReturnedDate__c)),&quot;🟩&quot;,
 IF ((TODAY()  -  StartDate__c) &lt;=  DaysOfHoldAllowed__c,&quot;🟨&quot;, &quot;🟥&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>