force-app/main/default/objects/Subscription__c/validationRules/No_more_than_2_months_of_hold_allowed.validationRule-meta.xml
<ValidationRule>
    <fullName>No_more_than_2_months_of_hold_allowed</fullName>
    <active>true</active>
    <description>no more than 2 months of rent are allowed (except for VIPs - up to 1 year)</description>
    <errorConditionFormula>IF ( TEXT (Reader__r.SubscriptionType__c)  = &apos;VIP&apos;,  
DaysOfHoldAllowed__c &gt; 365, DaysOfHoldAllowed__c &gt; 61)</errorConditionFormula>
    <errorMessage>Days of hold allowed exceed maximum possible period.</errorMessage>
</ValidationRule>