force-app/main/default/objects/Subscription__c/validationRules/No_more_than_5_books_can_be_taken_home.validationRule-meta.xml
<ValidationRule>
    <fullName>No_more_than_5_books_can_be_taken_home</fullName>
    <active>true</active>
    <description>No more than 5 books can be taken home (except for VIPs - up to 15 books).</description>
    <errorConditionFormula>IF ( TEXT (Reader__r.SubscriptionType__c) = &apos;VIP&apos;,
 Reader__r.NumberOfHoldBooks__c  &gt; 15, Reader__r.NumberOfHoldBooks__c &gt; 5)</errorConditionFormula>
    <errorMessage>Exceeded limit of books to take home.</errorMessage>
</ValidationRule>